# foster

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/prompts/: improvement-loop.md
.github/workflows/: foster-loop.yml
benchmarks/: README.md
benchmarks/counter/react/src/: App.test.tsx  App.tsx
benchmarks/kanban/react/src/: App.test.tsx  App.tsx  types.ts
crates/foster-client/: Cargo.toml
crates/foster-client/src/: lib.rs
crates/foster-core/: Cargo.toml
crates/foster-core/src/: lib.rs  machine.rs  snapshot.rs
crates/foster-macros/: Cargo.toml
crates/foster-macros/src/: lib.rs
crates/foster-server/: Cargo.toml
crates/foster-server/src/: lib.rs  store.rs
crates/foster-testgen/: Cargo.toml
crates/foster-testgen/src/: lib.rs
docs/: how-it-works.md
examples/aura/: Cargo.toml  package-lock.json  package.json  playwright.config.ts
examples/aura/src/: main.rs
examples/aura/static/: index.html
examples/aura/tests/: aura.sdk.ts  aura.spec.ts
examples/checkout/: Cargo.toml  package.json  playwright.config.ts
examples/checkout/src/: main.rs
examples/checkout/static/: style.css
examples/checkout/tests/: checkout.sdk.ts  checkout.spec.ts
examples/collab/: Cargo.toml
examples/collab/src/: main.rs
examples/collab/static/: style.css
examples/counter/: Cargo.toml  package-lock.json  package.json  playwright.config.ts
examples/counter/src/: main.rs
examples/counter/static/: index.html  style.css
examples/counter/test-results/: .last-run.json
examples/counter/test-results/counter-counter-error-→-recover-→-idle/: error-context.md
examples/counter/test-results/counter-counter-idle-→-break-it-→-error/: error-context.md
examples/counter/test-results/counter-counter-idle-→-decrement-→-idle/: error-context.md
examples/counter/test-results/counter-counter-idle-→-increment-→-idle/: error-context.md
examples/counter/test-results/counter-counter-idle-→-reset-→-idle/: error-context.md
examples/counter/test-results/counter-counter-inject-state-error/: error-context.md
examples/counter/test-results/counter-counter-inject-state-idle/: error-context.md
examples/counter/test-results/counter-counter-rapid-toggle-error↔idle-stays-in-sync/: error-context.md
examples/counter/test-results/counter-counter-walk-visits-every-state-≥2×-in-sequence/: error-context.md
examples/counter/tests/: counter.sdk.ts  counter.spec.ts
examples/form/: Cargo.toml
examples/form/src/: main.rs
examples/form/static/: style.css
examples/kanban/: Cargo.toml  package.json  playwright.config.ts
examples/kanban/src/: main.rs
examples/kanban/static/: index.html  style.css
examples/kanban/tests/: kanban.sdk.ts  kanban.spec.ts
examples/notion/: Cargo.toml  playwright.config.ts
examples/notion/src/: main.rs
examples/notion/static/: style.css
examples/notion/tests/: notion.spec.ts
examples/plane/: Cargo.toml  playwright.config.ts
examples/plane/src/: main.rs
examples/plane/static/: style.css
examples/plane/tests/: plane.spec.ts
examples/player/: Cargo.toml  package.json  playwright.config.ts
examples/player/src/: main.rs
examples/player/static/: index.html
examples/player/tests/: player.sdk.ts  player.spec.ts
scripts/: build-wasm.sh  check.sh  demo.sh  gen-tests.sh  measure.sh
