[workspace]
members = [
    "crates/foster-macros",
    "crates/foster-core",
    "crates/foster-server",
    "crates/foster-testgen",
    "examples/counter",
    "examples/player",
    "examples/kanban",
    "examples/aura",
    "examples/checkout",
    "examples/plane",
    "examples/notion",
]
# foster-client is wasm-only — build it separately with wasm-pack
exclude = ["crates/foster-client"]
resolver = "2"
