[package]
name = "foster-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
foster-core = { path = "../foster-core" }
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde_json = "1"
rmp-serde = "1"
console_error_panic_hook = "0.1"
json-patch = "4"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "CssStyleDeclaration",
    "Document",
    "Element",
    "Event",
    "Headers",
    "HtmlCollection",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "DomTokenList",
    "EventSource",
    "Location",
    "MessageEvent",
    "Node",
    "NodeList",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Storage",
    "Window",
]
