[package]
name = "foster-server"
version = "0.1.0"
edition = "2021"

[dependencies]
foster-core = { path = "../foster-core" }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
json-patch = "4"
