[package]
name = "player"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "player"
path = "src/main.rs"

[dependencies]
foster-core = { path = "../../crates/foster-core" }
foster-server = { path = "../../crates/foster-server" }
foster-testgen = { path = "../../crates/foster-testgen" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
serde_json = "1"
